--- a/AY 2019 - 2020/Lesson 06/Practical session/course examples/Les 06.ipynb
+++ b/AY 2019 - 2020/Lesson 06/Practical session/course examples/Les 06.ipynb
@@ -9,6 +9,7 @@
    },
    "source": [
     "# Modelling of Cognitive Processes\n",
+    "## Delta learning \n",
     "---\n",
     "Lesson 06   \n",
     "29/10/2019   \n",
@@ -27,12 +28,11 @@
     "\n",
     "## Theoretical\n",
     "- Delta learning: quick recap\n",
-    "- Activation functions: quick recap\n",
     "\n",
     "## Practical\n",
     "1. Florence + the machine: a Delta learning tutorial\n",
-    "2. Delta learning: DIY with the iris dataset\n",
-    "3. Different patterns, equal learning?"
+    "2. Modelling the blocking effect\n",
+    "3. Flower recognition with ```scikit-learn```"
    ]
   },
   {
@@ -76,7 +76,7 @@
     "- Formed in London in 2007\n",
     "- Lead singer: Florence Welch ⬇️\n",
     "\n",
-    "![Image of Florence](https://media.pitchfork.com/photos/5cbd2918ef5bbe6682d33c89/2:1/w_790/Florence-and-the-Machine.jpg)"
+    "![Image of Florence](./florence.jpg)"
    ]
   },
   {
@@ -108,12 +108,10 @@
     "\n",
     "Note that the pet detector also worked with specific features.   \n",
     "\n",
-    "![The pet detector](./fig01.jpg)\n",
+    "![The pet detector](./cat_dog_model.jpg)\n",
     "\n",
-    "Based on the aforementioned features being (un)available, the model will give a specific output.\n",
-    "\n",
-    "**Example**   \n",
-    "```input = np.array([0, 1, 1])```?"
+    "**What do we expect here?**   \n",
+    "```input = np.array([0, 1, 1])```"
    ]
   },
   {
@@ -132,7 +130,7 @@
     "- Unit 3 is **active**: has a picture on Facebook\n",
     "\n",
     "**Model output**   \n",
-    "![cat image](https://images.pexels.com/photos/617278/pexels-photo-617278.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500)"
+    "![Cat](./cat.jpg)"
    ]
   },
   {
@@ -325,7 +323,127 @@
     }
    },
    "source": [
-    "# 2. Delta learning: DIY with the iris dataset"
+    "# 2. Modelling the blocking effect"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Basic classical conditioning\n",
+    "\n",
+    "We consider the following situation\n",
+    "\n",
+    "![CS1 + US](./CS1_US.jpg)\n",
+    "\n",
+    "Here, the played sound is the **first conditioned stimulus (CS1)**.   \n",
+    "We pair the sound with an electrical shock, which is referred to as the **unconditioned stimulus (US)**.   \n",
+    "The reaction our subject has to the shock is often referred to as the **unconditioned response (UR)**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Basic classical conditioning\n",
+    "\n",
+    "After pairing CS1 and US multiple times, the UR (confused screaming) will become the **conditioned response (CR)**.   \n",
+    "Thus, the sound will elicit the screaming even though no shock was administered.\n",
+    "\n",
+    "![CR after conditioning](./CS1_conditioned.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## The blocking effect\n",
+    "\n",
+    "Now we do extra conditiong, but we show CS1 together with a **second conditioned stimulus (CS2)** (e.g. a strong light).   \n",
+    "After conditioning, CS1 + CS2 will also lead to confused screaming:\n",
+    "\n",
+    "![CS1 + CS2 + US](./CS1_CS2_US.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## The blocking effect\n",
+    "\n",
+    "Interestingly, when we show CS2 alone, this will not lead to the CR [(Kamin, 1967)](https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/19680014821.pdf).\n",
+    "\n",
+    "![Reaction to CS2](./CS2_alone.jpg)\n",
+    "\n",
+    "It appears that a subject is not able to learn that the light also predicts the shock.   \n",
+    "In other words: the learning of the CS2 - US association is _blocked_ because the CS1 - US assocation already exists..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Modelling the blocking effect\n",
+    "\n",
+    "Now, we ask you to prove the blocking effect using a model.   \n",
+    "You will have to do this yourself, relying on the code provided for exercise 1.   \n",
+    "The questions asked below might help you out.\n",
+    "\n",
+    "* How many units does your model need?\n",
+    "    * Input layer\n",
+    "        * The model can encounter two different stimuli: **only sound** and **sound + light**\n",
+    "        * Sound and light can be seen as two different units: if the unit is switched of, the stimulus is not available\n",
+    "    * Output layer\n",
+    "        * Only two outputs: aversion or no aversion --> this is doable with one unit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Modelling the blocking effect\n",
+    "\n",
+    "* Make a weight matrix to start with\n",
+    "* Use delta learning to learn the **CS1 - US association**\n",
+    "* Use delta learning to learn the **CS2 - US association**\n",
+    "   * Importantly, make sure that you use the weight matrix obtained from the previous step as a starting point\n",
+    "* Does the end result prove blocking? Why / why not?\n",
+    "   * How can you check investigate whether the blocking occured or not?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 3. Delta learning: DIY with the iris dataset"
    ]
   },
   {
@@ -367,7 +485,7 @@
    "source": [
     "## An example of the provided features\n",
     "\n",
-    "![iris features](./fig02.jpg)\n",
+    "![iris features](./iris.jpg)\n",
     "\n",
     "**Our question**   \n",
     "What iris _type (setosa, virginica or versicolor?)_ is this based on the provided measures?"
@@ -379,7 +497,7 @@
    "metadata": {
     "scrolled": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -618,17 +736,6 @@
     "\n",
     "# print accuracy using dedicated function\n",
     "print('Accuracy percentage: {0:.2f}'.format(accuracy_score(y_test, y_pred) * 100))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# 3. Different patterns, equal learning?"
    ]
   }
  ],
