--- a/AY 2019 - 2020/Lesson 08/Practical session/course examples/Les 08.ipynb
+++ b/AY 2019 - 2020/Lesson 08/Practical session/course examples/Les 08.ipynb
@@ -400,7 +400,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## <font color='indigo'>Homework assignment</font>\n",
     "\n",
