Add readme AY 2019-2020

--- a/AY 2019 - 2020/README.ipynb
+++ b/AY 2019 - 2020/README.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MCP (2018-2019)\n",
+    "# MCP (2019-2020)\n",
     "\n",
-    "[![Maintained](https://img.shields.io/badge/archived-january%202019-success)](https://img.shields.io/badge/archived-january%202019-success)\n",
+    "[![Maintained](https://img.shields.io/badge/archived-january%202020-success)](https://img.shields.io/badge/archived-january%202020-success)\n",
     "[![Contributors](https://img.shields.io/badge/contributors-3-blue)](https://img.shields.io/badge/contributors-3-blue)"
    ]
   },
@@ -16,7 +16,7 @@
    "source": [
     "## Overview\n",
     "\n",
-    "This subfolder contains the code used for the MCP course (1 Master Exp. Psych. Ghent University) for AY 2018-2019.\n",
+    "This subfolder contains the code used for the MCP course (1 Master Exp. Psych. Ghent University) for AY 2019-2020.\n",
     "Note: this folder is *not* maintained."
    ]
   },
@@ -26,7 +26,7 @@
    "source": [
     "## Organization\n",
     "\n",
-    "The material is organized by chapter in the MCP handbook. Note that the titles of the subfolder explain what code can be found inside. The material used in the theory sessions, practical sessions and tests are all located in their respective chapter folder."
+    "The material is organized by lessons. This means that **multiple** MCP handbook chapters can be covered in a single class. For example: in lesson 07 material from chapters 5 and 11 is covered. Note that the even lessons (2, 4, ...) are practical sessions, while the odd lessons are theory sessions. Test 1 can be found in lesson 6, test 2 in lesson 12. In line with the previous academic year, this course uses ```scikit-learn``` to teach the students how to model. "
    ]
   },
   {
