--- a/MCP code new version/README.ipynb
+++ b/MCP code new version/README.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MCP (2018-2019)\n",
+    "# MCP (2020-2019)\n",
     "\n",
-    "[![Maintained](https://img.shields.io/badge/archived-january%202019-success)](https://img.shields.io/badge/archived-january%202019-success)\n",
+    "[![Maintained](https://img.shields.io/badge/maintained-yes-success)](https://img.shields.io/badge/maintained-yes-success)\n",
     "[![Contributors](https://img.shields.io/badge/contributors-3-blue)](https://img.shields.io/badge/contributors-3-blue)"
    ]
   },
@@ -16,8 +16,8 @@
    "source": [
     "## Overview\n",
     "\n",
-    "This subfolder contains the code used for the MCP course (1 Master Exp. Psych. Ghent University) for AY 2018-2019.\n",
-    "Note: this folder is *not* maintained."
+    "This subfolder contains the code used for the MCP course (1 Master Exp. Psych. Ghent University) for AY 2020-2021.\n",
+    "Note: this folder is maintained."
    ]
   },
   {
@@ -26,7 +26,9 @@
    "source": [
     "## Organization\n",
     "\n",
-    "The material is organized by chapter in the MCP handbook. Note that the titles of the subfolder explain what code can be found inside. The material used in the theory sessions, practical sessions and tests are all located in their respective chapter folder."
+    "The material is organized in line with the chapters in the book \"Introduction to Modelling Cognitive Processes\" by Tom Verguts. Note that each folder contains code that is used in the theoretical course. There are no scripts included that were used for the practical sessions, or the practical tests. All the practical session code and assignments can be found on the [Ghent University online environment](https://ufora.ugent.be/d2l/home).\n",
+    "\n",
+    "In contrast with the previous academic years, this course is taught using ```TensorFlow 1```. Hence, we instructed to create a specific environment to run all the code available in this course. More information can be found immediately below."
    ]
   },
   {
@@ -35,12 +37,17 @@
    "source": [
     "## Programming environment   \n",
     "\n",
-    "When last tested, all code could be executed using:\n",
+    "The most important softwares, and their versions, are:\n",
     "\n",
-    "- python 3 (*v. 3.7.4*)\n",
+    "- python 3 (*v. 3.7.8*)\n",
     "- anaconda (*v. 4.9.1*)\n",
-    "    \n",
-    "Install missing packages (e.g. both ```sklearn``` and ```scipy``` were needed for this course) using ```conda install [packageName]```"
+    "- TensorFlow 1 (*v. 1.14.0*)\n",
+    "\n",
+    "All the required modules are listed in 'requirements.txt' (root folder)   \n",
+    "Note that this installs TensorFlow 1!   \n",
+    "You can install from this list by running ```conda create --name <name> --file requirements.txt``` in Anaconda prompt.   \n",
+    "\n",
+    "Install any missing packages using ```conda install [packageName]```"
    ]
   },
   {
@@ -59,7 +66,7 @@
     "    * [mail](mailto:Pieter.Huycke@UGent.be)\n",
     "    * [web entry](https://www.cogcomneurosci.com/about/#pieter-huycke)\n",
     "\n",
-    "[Labsite]: https://cogcomneurosci.com/"
+    "[Lab website]: https://cogcomneurosci.com/"
    ]
   },
   {
